# frankenlibc

./: .gitignore  .opencode.json.20260413_183028.bak  .skill-loop-progress.md  AGENTS.md  CHANGELOG.md  COMPATIBILITY.md  Cargo.toml  DEPLOYMENT.md  EVIDENCE.md  FEATURE_PARITY.md  FRANKENLIBC_REVIEW_ARTICLE.md  GEMINI_REVIEW_SUMMARY.md  PARITY-COVERAGE.md  PLAN_TO_PORT_GLIBC_TO_RUST.md  PROPOSED_ARCHITECTURE.md  README.md  REALITY_CHECK_BRIDGE_PLAN.md  SECURITY.md  STDIO_NATIVE_REPLACEMENT_PLAN.md  UPGRADE_LOG.md  claude-upgrade-progress.json  cursor.mcp.json  gemini.mcp.json  rust-toolchain.toml  support_matrix.json
crates/frankenlibc/: Cargo.toml
crates/frankenlibc-abi/: Cargo.toml  build.rs
crates/frankenlibc-abi/examples/: a64l_l64a_tax_bench.rs  asctime_bench.rs  ecvt_alloc_bench.rs  erand48_tax_bench.rs  explicit_bzero_chk_bench.rs  fnmatch_bench.rs  gcvt_alloc_bench.rs  gcvt_bench.rs  gmtime_bench.rs  math_survey.rs  mbsnrtowcs_count_bench.rs  mbsnrtowcs_write_bench.rs  mbsrtowcs_count_bench.rs  mbsrtowcs_write_bench.rs  mbstowcs_bench.rs  mbstowcs_count_bench.rs  mem_large.rs  memccpy_bench.rs  putc_ab.rs  qsort_descending_lane_bench.rs  qsort_radix_vs_stdlib_bench.rs  qsort_unsigned_lane_bench.rs  reallocarray_tax_bench.rs  regex_bench.rs  snprintf_bench.rs  sort_bench.rs  sprintf_float_bench.rs  sscanf_bench.rs  strcoll_bench.rs  strftime_bench.rs  strptime_bench.rs  strsort_bench.rs  strtod_bench.rs  strtol_bench.rs  timegm_bench.rs  wcsnrtombs_bench.rs  wcsnrtombs_count_bench.rs  wcsrtombs_bench.rs  wcsrtombs_count_bench.rs  wcstombs_count_bench.rs  (+1 more)
crates/frankenlibc-abi/src/: c11threads_abi.rs  ctype_abi.rs  dirent_abi.rs  dlfcn_abi.rs  efun_abi.rs  erf_tables.rs  err_abi.rs  errno_abi.rs  expl_table.rs  fenv_abi.rs  fortify_abi.rs  glibc_internal_abi.rs  grp_abi.rs  host_resolve.rs  htm_fast_path.rs  iconv_abi.rs  inet_abi.rs  io_abi.rs  io_internal_abi.rs  isoc_abi.rs  lib.rs  locale_abi.rs  malloc_abi.rs  math_abi.rs  membrane_state.rs  mmap_abi.rs  nlist_abi.rs  owned_tls_cache.rs  owned_unwind_abi.rs  poll_abi.rs  process_abi.rs  pthread_abi.rs  pwd_abi.rs  resolv_abi.rs  resource_abi.rs  rpc_abi.rs  runtime_policy.rs  search_abi.rs  setjmp_abi.rs  signal_abi.rs  (+12 more)
crates/frankenlibc-abi/tests/: a64l_l64a_differential_fuzz.rs  argz_mutation_differential_fuzz.rs  asctime_r_differential_fuzz.rs  asprintf_differential_test.rs  basename_dirname_differential_fuzz.rs  basename_dirname_differential_probe.rs  c11threads_abi_test.rs  c32rtomb_differential_fuzz.rs  c8rtomb_differential_fuzz.rs  cjk_table_gen.rs  complex_math_differential_fuzz.rs  conformance_diff_acct.rs  conformance_diff_adjtimex.rs  conformance_diff_admin_syscalls.rs  conformance_diff_aio.rs  conformance_diff_alarm.rs  conformance_diff_aligned_alloc.rs  conformance_diff_alphasort.rs  conformance_diff_arc4random.rs  conformance_diff_argz.rs  conformance_diff_arpa_inet.rs  conformance_diff_asctime_range.rs  conformance_diff_asinh_special.rs  conformance_diff_asprintf.rs  conformance_diff_at_variants.rs  conformance_diff_atan2_special.rs  conformance_diff_b64.rs  conformance_diff_bessel.rs  conformance_diff_bessel_jn_yn.rs  conformance_diff_bsd_signal.rs  conformance_diff_c16rtomb.rs  conformance_diff_c23_logexp_f32.rs  conformance_diff_c23_narrow.rs  conformance_diff_c23_narrow_widthnames.rs  conformance_diff_c23_pow.rs  conformance_diff_capget.rs  conformance_diff_catopen.rs  conformance_diff_cbrt_special.rs  conformance_diff_cfbaud.rs  conformance_diff_cfmakeraw.rs  (+753 more)
crates/frankenlibc-abi/version_scripts/: libc.map
crates/frankenlibc-bench/: Cargo.toml
crates/frankenlibc-bench/benches/: acoshf_glibc_bench.rs  alien_cs_bench.rs  asinh_f64_ab_bench.rs  asinh_fix_bench.rs  asinhf_glibc_bench.rs  atanhf_glibc_bench.rs  baseline_capture_bench.rs  bsearch_glibc_bench.rs  calloc_glibc_bench.rs  cbrt_glibc_bench.rs  clock_gettime_glibc_bench.rs  condvar_bench.rs  cvt_glibc_bench.rs  elimination_bench.rs  erfc_glibc_bench.rs  errno_bench.rs  exp10f_fast_ab_bench.rs  exp2_f64_glibc_bench.rs  exp_log_glibc_bench.rs  f32_math_survey_bench.rs  fmod_survey_bench.rs  fmodf_cand_bench.rs  fmodf_survey_bench.rs  fputc_write_ab_bench.rs  fputs_fd_glibc_bench.rs  fputs_glibc_bench.rs  fused_span_glibc_bench.rs  gcvt_glibc_bench.rs  glibc_baseline_bench.rs  gmtime_ab_bench.rs  iconv_bench.rs  iconv_glibc_bench.rs  inet_addr_glibc_bench.rs  inet_ntop_glibc_bench.rs  inet_pton_glibc_bench.rs  inet_pton_inprocess_bench.rs  lgamma_glibc_bench.rs  lgamma_tail_ab_bench.rs  lgammaf_glibc_bench.rs  lgammaf_tail_probe_bench.rs  (+68 more)
crates/frankenlibc-bench/examples/: alloc_paths_ab.rs  basename_ab.rs  casecmp_ab.rs  casefold_ab.rs  cexp_ab.rs  cexp_oldnew.rs  dyade_iso.rs  dyadf_iso.rs  dyadg_iso.rs  e_iso.rs  fgetws_ab.rs  fnmatch_ab.rs  fputs_ab.rs  gen_ascii_ctype.rs  getaddrinfo_ab.rs  gethostbyname_needle_ab.rs  getnameinfo_ab.rs  gexp_ab.rs  gsci_iso.rs  gstrip_ab.rs  hostent_iter_ab.rs  hosts_lookup_ab.rs  hosts_reverse_ab.rs  inte_iso.rs  intf_iso.rs  ip_fmt_ab.rs  localtime_survey.rs  malloc_resolve_ab.rs  malloc_sizetrack_ab.rs  malloc_st_probe.rs  mathf64_ab.rs  mbstowcs_ab.rs  memchr_asm_ab.rs  memchr_fold512_ab.rs  memchr_foldwidth_ab.rs  memchr_kernel_ab.rs  memchr_largen_ab.rs  memcmp_ab.rs  memcmp_align.rs  memcpy_align.rs  (+69 more)
crates/frankenlibc-bench/src/: lib.rs
crates/frankenlibc-core/: Cargo.toml  build.rs
crates/frankenlibc-core/src/: float128.rs  lib.rs
crates/frankenlibc-core/tests/: ctype_differential_probe.rs  ecvt_differential_probe.rs  elf_loader_test.rs  fnmatch_differential_probe.rs  glob_brace_dos_robustness.rs  glob_differential_probe.rs  inet_differential_probe.rs  iswctype_differential_scan.rs  math_special_differential_probe.rs  printf_float_differential_fuzz.rs  printf_int_differential_fuzz.rs  (+23 more)
crates/frankenlibc-fixture-exec/: Cargo.toml
crates/frankenlibc-fuzz/: .gitignore  Cargo.toml
crates/frankenlibc-harness/: Cargo.toml
crates/frankenlibc-membrane/: Cargo.toml  build.rs  slo.yaml
crates/frankenlibc_conformance/: Cargo.toml
tools/stdio_synth/: Cargo.toml  check_smt_budget.sh
(+3972 files in other folders)
