[workspace]
resolver = "2"
members = [
  "crates/frankenlibc-membrane",
  "crates/frankenlibc-core",
  "crates/frankenlibc-abi",
  "crates/frankenlibc-fixture-exec",
  "crates/frankenlibc-harness",
  "crates/frankenlibc-bench",
  # Legacy crates (kept for migration compatibility)
  "crates/frankenlibc",
  "crates/frankenlibc_conformance",
]
# tools/ hosts sub-workspaces (e.g. tools/stdio_synth) that declare their own
# `[workspace]` root — they are build-time utilities, not runtime members.
# Excluding the whole directory keeps cargo from detecting two workspace
# roots when it walks the source tree during `cargo test -p <main-member>`.
exclude = ["tools"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[workspace.lints.rust]
unsafe_code = "allow"

[workspace.dependencies]
parking_lot = "0.12.5"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
regex = "1.12.3"
tracing = "0.1.44"
blake3 = "1.8.4"
sha2 = "0.11.0"
md-5 = "0.11.0"
clap = { version = "4.6.1", features = ["derive"] }
criterion = "0.8.2"
libc = "0.2.185"

# Internal crates
frankenlibc-membrane = { path = "crates/frankenlibc-membrane" }
frankenlibc-core = { path = "crates/frankenlibc-core" }
frankenlibc-abi = { path = "crates/frankenlibc-abi" }
frankenlibc-fixture-exec = { path = "crates/frankenlibc-fixture-exec" }

# Companion crates (build tooling only)
asupersync-conformance = "0.3.1"
ftui-harness = "0.3.1"
