[package]
name = "frankenlibc-abi"
version.workspace = true
edition.workspace = true
license-file = "../../LICENSE"
description = "ABI-compatible extern C boundary for FrankenLibC (produces libc.so)"
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[lints.rust]
unsafe_code = "allow"

[features]
default = []
standalone = []
owned-unwind-stub = []
owned-tls-cache = ["frankenlibc-membrane/owned-tls-cache"]
conformance-testing = []

[dependencies]
frankenlibc-membrane = { workspace = true }
frankenlibc-core = { workspace = true }
libc = { workspace = true }
parking_lot = { workspace = true }
sha2 = { workspace = true }
md-5 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }
sha2 = { workspace = true }
