[package]
name = "frankenlibc-bench"
version.workspace = true
edition.workspace = true
license-file = "../../LICENSE"
description = "Benchmarks for FrankenLibC"

[lints.rust]
unsafe_code = "allow"

[features]
default = []
abi-bench = ["dep:frankenlibc-abi"]

[dependencies]
frankenlibc-membrane = { workspace = true }
frankenlibc-core = { workspace = true }
frankenlibc-abi = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
libc = { workspace = true }
libm = "0.2.16"

[[bench]]
name = "string_bench"
harness = false

[[bench]]
name = "wchar_bench"
harness = false

[[bench]]
name = "iconv_bench"
harness = false

[[bench]]
name = "malloc_bench"
harness = false

[[bench]]
name = "membrane_bench"
harness = false

[[bench]]
name = "runtime_math_bench"
harness = false

[[bench]]
name = "runtime_math_kernels_bench"
harness = false

[[bench]]
name = "strict_hardened_overhead_harness"
harness = false

[[bench]]
name = "stdio_bench"
harness = false

[[bench]]
name = "mutex_bench"
harness = false

[[bench]]
name = "condvar_bench"
harness = false

[[bench]]
name = "alien_cs_bench"
harness = false

[[bench]]
name = "baseline_capture_bench"
harness = false
required-features = ["abi-bench"]

[[bench]]
name = "calloc_glibc_bench"
harness = false
required-features = ["abi-bench"]

[[bench]]
name = "powf_glibc_bench"
harness = false

[[bench]]
name = "exp_log_glibc_bench"
harness = false

[[bench]]
name = "exp2_f64_glibc_bench"
harness = false

[[bench]]
name = "strchr_glibc_bench"
harness = false
required-features = ["abi-bench"]

[[bench]]
name = "strtol_glibc_bench"
harness = false
required-features = ["abi-bench"]

[[bench]]
name = "elimination_bench"
harness = false

[[bench]]
name = "metadata_read_bench"
harness = false

[[bench]]
name = "glibc_baseline_bench"
harness = false

[[bench]]
name = "errno_bench"
harness = false
required-features = ["abi-bench"]

[[bench]]
name = "memset_abi_bench"
harness = false
required-features = ["abi-bench"]

[[bench]]
name = "stdio_glibc_baseline_bench"
harness = false
required-features = ["abi-bench"]

[[bench]]
name = "resolv_parsers_bench"
harness = false

[[bench]]
name = "strlen_glibc_bench"
harness = false
required-features = ["abi-bench"]

[[bench]]
name = "iconv_glibc_bench"
harness = false
required-features = ["abi-bench"]

# In-process A/B for the strict snprintf("%s") copy kernel. No abi-bench: links
# NO fl symbols so `libc::snprintf` resolves to host glibc directly (cc/BlackThrush).
[[bench]]
name = "snprintf_s_strict_ab_bench"
harness = false

# End-to-end fputs vs host glibc (dlmopen). Validates the puts/fputs strlen lever.
[[bench]]
name = "fputs_glibc_bench"
harness = false
required-features = ["abi-bench"]

# strftime vs host glibc (dlmopen). Validates the Time membrane fast-path (47b89e129).
[[bench]]
name = "strftime_glibc_bench"
harness = false
required-features = ["abi-bench"]

# inet_pton vs host glibc (dlmopen). Validates the Inet membrane fast-path (d3fb26c0d).
[[bench]]
name = "inet_pton_glibc_bench"
harness = false
required-features = ["abi-bench"]

# inet_addr vs host glibc (dlmopen). Measures the parse_ipv4_bsd byte-walk rewrite.
[[bench]]
name = "inet_addr_glibc_bench"
harness = false
required-features = ["abi-bench"]

# RELIABLE in-process inet_pton: core vs REAL in-process glibc (no abi-bench → no fl
# symbol shadowing). Trustworthy baseline (unlike dlmopen). cc/BlackThrush.
[[bench]]
name = "inet_pton_inprocess_bench"
harness = false

# RELIABLE in-process string survey: core vs REAL in-process glibc (no abi-bench).
[[bench]]
name = "string_inprocess_survey_bench"
harness = false

# strtod (decimal/hex double parse) vs host glibc, in-process (no abi-bench).
[[bench]]
name = "strtod_glibc_bench"
harness = false

# gcvt (double -> "%g" string) vs host glibc, in-process (no abi-bench).
[[bench]]
name = "gcvt_glibc_bench"
harness = false

# inet_ntop vs host glibc (dlmopen). Measures the format_ipv4 byte-level rewrite.
[[bench]]
name = "inet_ntop_glibc_bench"
harness = false
required-features = ["abi-bench"]

# readdir vs host glibc (dlmopen). Validates the IoFd membrane fast-path (0b08a21e8).
[[bench]]
name = "readdir_glibc_bench"
harness = false
required-features = ["abi-bench"]

# sscanf vs host glibc (dlmopen). Baseline for the documented scanf known_remaining lever.
[[bench]]
name = "sscanf_glibc_bench"
harness = false
required-features = ["abi-bench"]

# Multi-threaded stdio contention vs glibc. Quantifies bd-hqo6b6 (global registry lock)
# + the MT value of the shipped lock-removal guards.
[[bench]]
name = "stdio_mt_contention_bench"
harness = false
required-features = ["abi-bench"]
