[package]
name = "frankenlibc-bench"
version.workspace = true
edition.workspace = true
license-file = "../../LICENSE"
description = "Benchmarks for FrankenLibC"

[lints.rust]
unsafe_code = "allow"

[features]
default = []
abi-bench = ["dep:frankenlibc-abi"]

[dependencies]
frankenlibc-membrane = { workspace = true }
frankenlibc-core = { workspace = true }
frankenlibc-abi = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
libc = { workspace = true }
libm = "0.2.16"

[[bench]]
name = "string_bench"
harness = false

[[bench]]
name = "wchar_bench"
harness = false

[[bench]]
name = "iconv_bench"
harness = false

[[bench]]
name = "malloc_bench"
harness = false

[[bench]]
name = "membrane_bench"
harness = false

[[bench]]
name = "runtime_math_bench"
harness = false

[[bench]]
name = "runtime_math_kernels_bench"
harness = false

[[bench]]
name = "strict_hardened_overhead_harness"
harness = false

[[bench]]
name = "stdio_bench"
harness = false

[[bench]]
name = "mutex_bench"
harness = false

[[bench]]
name = "condvar_bench"
harness = false

[[bench]]
name = "alien_cs_bench"
harness = false

[[bench]]
name = "baseline_capture_bench"
harness = false
required-features = ["abi-bench"]

[[bench]]
name = "calloc_glibc_bench"
harness = false
required-features = ["abi-bench"]

[[bench]]
name = "powf_glibc_bench"
harness = false

[[bench]]
name = "exp_log_glibc_bench"
harness = false

[[bench]]
name = "exp2_f64_glibc_bench"
harness = false

[[bench]]
name = "strchr_glibc_bench"
harness = false
required-features = ["abi-bench"]

[[bench]]
name = "strtol_glibc_bench"
harness = false
required-features = ["abi-bench"]

[[bench]]
name = "elimination_bench"
harness = false

[[bench]]
name = "metadata_read_bench"
harness = false

[[bench]]
name = "glibc_baseline_bench"
harness = false

[[bench]]
name = "errno_bench"
harness = false
required-features = ["abi-bench"]

[[bench]]
name = "memset_abi_bench"
harness = false
required-features = ["abi-bench"]

[[bench]]
name = "stdio_glibc_baseline_bench"
harness = false
required-features = ["abi-bench"]

[[bench]]
name = "resolv_parsers_bench"
harness = false

[[bench]]
name = "strlen_glibc_bench"
harness = false
required-features = ["abi-bench"]

[[bench]]
name = "iconv_glibc_bench"
harness = false
required-features = ["abi-bench"]

# In-process A/B for the strict snprintf("%s") copy kernel. No abi-bench: links
# NO fl symbols so `libc::snprintf` resolves to host glibc directly (cc/BlackThrush).
[[bench]]
name = "snprintf_s_strict_ab_bench"
harness = false

# End-to-end fputs vs host glibc (dlmopen). Validates the puts/fputs strlen lever.
[[bench]]
name = "fputs_glibc_bench"
harness = false
required-features = ["abi-bench"]

# strftime vs host glibc (dlmopen). Validates the Time membrane fast-path (47b89e129).
[[bench]]
name = "strftime_glibc_bench"
harness = false
required-features = ["abi-bench"]

# inet_pton vs host glibc (dlmopen). Validates the Inet membrane fast-path (d3fb26c0d).
[[bench]]
name = "inet_pton_glibc_bench"
harness = false
required-features = ["abi-bench"]

# inet_addr vs host glibc (dlmopen). Measures the parse_ipv4_bsd byte-walk rewrite.
[[bench]]
name = "inet_addr_glibc_bench"
harness = false
required-features = ["abi-bench"]

# RELIABLE in-process inet_pton: core vs REAL in-process glibc (no abi-bench → no fl
# symbol shadowing). Trustworthy baseline (unlike dlmopen). cc/BlackThrush.
[[bench]]
name = "inet_pton_inprocess_bench"
harness = false

# RELIABLE in-process string survey: core vs REAL in-process glibc (no abi-bench).
[[bench]]
name = "string_inprocess_survey_bench"
harness = false

# strtod (decimal/hex double parse) vs host glibc, in-process (no abi-bench).
[[bench]]
name = "strtod_glibc_bench"
harness = false

# gcvt (double -> "%g" string) vs host glibc, in-process (no abi-bench).
[[bench]]
name = "gcvt_glibc_bench"
harness = false

# ecvt/fcvt (double -> digit string) vs host glibc, in-process (no abi-bench).
[[bench]]
name = "cvt_glibc_bench"
harness = false

# memrchr OLD (fold double-load) vs NEW (direct reverse scan) vs glibc, 1 process.
[[bench]]
name = "memrchr_ab_bench"
harness = false

# strcmp OLD (single 32B panel) vs NEW (4×32 folded 128B block) vs glibc, 1 process.
[[bench]]
name = "strcmp_fold_ab_bench"
harness = false

# wcscmp full-membrane vs core-fastpath vs glibc — measures the wide-char
# strict-passthrough membrane tax. Needs fl symbols.
[[bench]]
name = "wcscmp_membrane_ab_bench"
harness = false
required-features = ["abi-bench"]

# wcsspn set-membership core: OLD [bool;128] vs NEW [u64;2] bitmap vs glibc, 1 process.
[[bench]]
name = "wcsspn_set_ab_bench"
harness = false

# strspn OLD (N simd_eq) vs NEW (2-shuffle classifier) vs glibc, 1 process.
[[bench]]
name = "strspn_shuffle_ab_bench"
harness = false

# qsort fallback: pdqsort vs merge vs glibc, expensive comparator, 1 process.
[[bench]]
name = "sort_fallback_ab_bench"
harness = false

# inet_ntop vs host glibc (dlmopen). Measures the format_ipv4 byte-level rewrite.
[[bench]]
name = "inet_ntop_glibc_bench"
harness = false
required-features = ["abi-bench"]

# readdir vs host glibc (dlmopen). Validates the IoFd membrane fast-path (0b08a21e8).
[[bench]]
name = "readdir_glibc_bench"
harness = false
required-features = ["abi-bench"]

# sscanf vs host glibc (dlmopen). Baseline for the documented scanf known_remaining lever.
[[bench]]
name = "sscanf_glibc_bench"
harness = false
required-features = ["abi-bench"]

# Multi-threaded stdio contention vs glibc. Quantifies bd-hqo6b6 (global registry lock)
# + the MT value of the shipped lock-removal guards.
[[bench]]
name = "stdio_mt_contention_bench"
harness = false
required-features = ["abi-bench"]

# qsort integer-radix prefix gate: wasted-attempt cost vs gate cost, 1 process.
[[bench]]
name = "qsort_gate_ab_bench"
harness = false

# qsort fallback: fl custom pdqsort vs std sort_unstable vs glibc, 1 process.
[[bench]]
name = "qsort_pdqsort_ab_bench"
harness = false

# qsort large-element: fl pdqsort vs index-sort vs glibc (width 32), 1 process.
[[bench]]
name = "qsort_indexsort_ab_bench"
harness = false

# wcschr SIMD width: narrow(8) vs wide(32) vs glibc, short+long, 1 process.
[[bench]]
name = "wcschr_width_ab_bench"
harness = false

# render_pct_e (strfromd %e body) vs glibc strfromd, in-process (no abi-bench).
[[bench]]
name = "strfrome_glibc_bench"
harness = false

# printf %g/%e core formatters (post-delegation) vs glibc strfromd, in-process.
[[bench]]
name = "printf_float_glibc_bench"
harness = false

# erfc/erf vs host glibc, in-process (no abi-bench) — baseline for a future ARM erfc port.
[[bench]]
name = "erfc_glibc_bench"
harness = false

# sincos vs host glibc, in-process (no abi-bench) — fused fast-reduction lever.
[[bench]]
name = "sincos_glibc_bench"
harness = false

# regex leftmost_start prefilter-seed prune A/B.
[[bench]]
name = "regex_prefilter_ab_bench"
harness = false

# f64 cbrt vs host glibc, in-process (no abi-bench) — passthrough parity check.
[[bench]]
name = "cbrt_glibc_bench"
harness = false

# f64 lgamma vs host glibc + log(tgamma) candidate, in-process (no abi-bench).
[[bench]]
name = "lgamma_glibc_bench"
harness = false

# f32 lgammaf vs host glibc + log(tgamma) candidate, in-process (no abi-bench).
[[bench]]
name = "lgammaf_glibc_bench"
harness = false

# Reliable same-process survey: fl f64 transcendental passthroughs vs glibc.
[[bench]]
name = "math_passthrough_survey_bench"
harness = false

# Reliable same-process survey: fl f32 transcendental passthroughs vs glibc.
[[bench]]
name = "f32_math_survey_bench"
harness = false

# f32 asinhf candidate (fast-f32 logf kernel) vs deployed vs glibc.
[[bench]]
name = "asinhf_glibc_bench"
harness = false

# f32 acoshf candidate (fast-f32 logf kernel) vs deployed vs glibc.
[[bench]]
name = "acoshf_glibc_bench"
harness = false

# f32 atanhf candidate (fast-f32 logf kernel on [0.5,1)) vs deployed vs glibc.
[[bench]]
name = "atanhf_glibc_bench"
harness = false

# f64 asinh [1,16) midrange candidate (bare-log fused kernel) vs libm vs glibc.
[[bench]]
name = "asinh_f64_ab_bench"
harness = false

# f64 lgamma [13,inf) tail candidate (Stirling asymptotic) vs libm vs glibc.
[[bench]]
name = "lgamma_tail_ab_bench"
harness = false

# Reliable same-process survey: fl f64 exact binary ops (fmod/remainder) vs glibc.
[[bench]]
name = "fmod_survey_bench"
harness = false

# f64 remainder fdlibm-fmod candidate (bit-exact) vs deployed vs glibc.
[[bench]]
name = "remainder_glibc_bench"
harness = false

# Reliable same-process survey: fl f32 exact binary ops (fmodf/remainderf) vs glibc.
[[bench]]
name = "fmodf_survey_bench"
harness = false

# f32 fmodf f64-widen candidate (bit-exact) vs deployed vs glibc.
[[bench]]
name = "fmodf_cand_bench"
harness = false

# asinh x>=16: asymptotic (1-ULP, gate RED) vs sqrt-formula (correct) vs glibc.
[[bench]]
name = "asinh_fix_bench"
harness = false

# probe: f32 lgammaf tail
[[bench]]
name = "lgammaf_tail_probe_bench"
harness = false

# exp10f fallback: libm::exp2 vs fl fused exp2 vs glibc.
[[bench]]
name = "exp10f_fast_ab_bench"
harness = false

# tsearch insert+find vs single-walk insert_find vs glibc.
[[bench]]
name = "tsearch_ab_bench"
harness = false

# bsearch deployed (membrane decide x2) vs glibc (dlmopen). bd-n40in2 lever.
[[bench]]
name = "bsearch_glibc_bench"
harness = false
required-features = ["abi-bench"]

# buffered-write fputc: deployed fl (ST registry lock-skip) vs glibc (dlmopen).
[[bench]]
name = "fputc_write_ab_bench"
harness = false
required-features = ["abi-bench"]

# RNG global-state membrane fast-path vs host glibc, in-process (no abi-bench).
[[bench]]
name = "rng_membrane_ab_bench"
required-features = ["abi-bench"]
harness = false

# mbrtowc UTF-8 decode vs host glibc, in-process (abi-bench + dlmopen).
[[bench]]
name = "mbrtowc_ab_bench"
required-features = ["abi-bench"]
harness = false

# wide-ctype (iswalpha/towlower/wcwidth) vs host glibc, in-process (abi-bench + dlmopen).
[[bench]]
name = "wctype_ab_bench"
required-features = ["abi-bench"]
harness = false

# gmtime_r/timegm time<->broken-down vs host glibc, in-process (abi-bench + dlmopen).
[[bench]]
name = "gmtime_ab_bench"
required-features = ["abi-bench"]
harness = false

# wide-mem (wmemset/wmemchr/wmemcmp/wmemcpy) vs host glibc, in-process (abi-bench + dlmopen).
[[bench]]
name = "wmem_ab_bench"
required-features = ["abi-bench"]
harness = false

# memset/memcpy mid-size vs host glibc, in-process (abi-bench + dlmopen).
[[bench]]
name = "memset_midsize_ab_bench"
required-features = ["abi-bench"]
harness = false

# hot string-family small-size vs host glibc, in-process (abi-bench + dlmopen).
[[bench]]
name = "string_family_small_ab_bench"
required-features = ["abi-bench"]
harness = false

# FUSED span (strcspn/strpbrk/strspn small-set) deployed fl vs host glibc, dlmopen.
[[bench]]
name = "fused_span_glibc_bench"
required-features = ["abi-bench"]
harness = false

# in-process A/B: old vs new scan_c_string strlen kernel vs host glibc.
[[bench]]
name = "scan_strlen_ab_bench"
required-features = ["abi-bench"]
harness = false

# wcscpy copy kernel: OLD 2-pass (wcslen+copy) vs NEW fused 1-pass vs glibc, 1 process.
[[bench]]
name = "wcscpy_fused_ab_bench"
harness = false

# strspn kernel: OLD 4-pass vs NEW fused 2-pass vs glibc, 1 process.
[[bench]]
name = "strspn_fused_ab_bench"
harness = false
