[package]
name = "frankenlibc-core"
version.workspace = true
edition.workspace = true
license-file = "../../LICENSE"
description = "Safe Rust implementations of libc functions"

[lints.rust]
unsafe_code = "deny"

[dependencies]
frankenlibc-membrane = { workspace = true }
libm = "0.2"

[dev-dependencies]
proptest = "1.6"
