[package]
name = "frankenlibc-core"
version.workspace = true
edition.workspace = true
license-file = "../../LICENSE"
description = "Safe Rust implementations of libc functions"
build = "build.rs"

[lints.rust]
unsafe_code = "deny"

[dependencies]
frankenlibc-membrane = { workspace = true }
libm = "0.2.16"
md-5 = { workspace = true }
parking_lot = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = "1.11.0"

[build-dependencies]
serde_json = { workspace = true }
stdio-synth = { path = "../../tools/stdio_synth" }
