[package]
name = "frankenlibc-fixture-exec"
version.workspace = true
edition.workspace = true
license-file = "../../LICENSE"
description = "Fixture execution adapter for frankenlibc harness tooling"

[lib]
doctest = false

[dependencies]
frankenlibc_conformance = { path = "../frankenlibc_conformance" }
