[package]
name = "frankenlibc-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
arbitrary = { version = "1", features = ["derive"] }
frankenlibc-membrane = { path = "../frankenlibc-membrane" }
frankenlibc-core = { path = "../frankenlibc-core" }
frankenlibc-abi = { path = "../frankenlibc-abi" }
libc = "0.2"

[[bin]]
name = "fuzz_string"
path = "fuzz_targets/fuzz_string.rs"
doc = false

[[bin]]
name = "fuzz_malloc"
path = "fuzz_targets/fuzz_malloc.rs"
doc = false

[[bin]]
name = "fuzz_membrane"
path = "fuzz_targets/fuzz_membrane.rs"
doc = false

[[bin]]
name = "fuzz_printf"
path = "fuzz_targets/fuzz_printf.rs"
doc = false

[[bin]]
name = "fuzz_resolver"
path = "fuzz_targets/fuzz_resolver.rs"
doc = false

[[bin]]
name = "fuzz_regex"
path = "fuzz_targets/fuzz_regex.rs"
doc = false

[[bin]]
name = "fuzz_scanf"
path = "fuzz_targets/fuzz_scanf.rs"
doc = false

[[bin]]
name = "fuzz_stdlib"
path = "fuzz_targets/fuzz_stdlib.rs"
doc = false

[[bin]]
name = "fuzz_ctype"
path = "fuzz_targets/fuzz_ctype.rs"
doc = false

[[bin]]
name = "fuzz_time"
path = "fuzz_targets/fuzz_time.rs"
doc = false

[[bin]]
name = "fuzz_math"
path = "fuzz_targets/fuzz_math.rs"
doc = false

[[bin]]
name = "fuzz_inet"
path = "fuzz_targets/fuzz_inet.rs"
doc = false

[[bin]]
name = "fuzz_locale"
path = "fuzz_targets/fuzz_locale.rs"
doc = false

[[bin]]
name = "fuzz_iconv"
path = "fuzz_targets/fuzz_iconv.rs"
doc = false

[[bin]]
name = "fuzz_dirent"
path = "fuzz_targets/fuzz_dirent.rs"
doc = false

[[bin]]
name = "fuzz_resolv"
path = "fuzz_targets/fuzz_resolv.rs"
doc = false

[[bin]]
name = "fuzz_pwd_grp"
path = "fuzz_targets/fuzz_pwd_grp.rs"
doc = false

[[bin]]
name = "fuzz_runtime_math"
path = "fuzz_targets/fuzz_runtime_math.rs"
doc = false

[[bin]]
name = "fuzz_elf_loader"
path = "fuzz_targets/fuzz_elf_loader.rs"
doc = false

[[bin]]
name = "fuzz_pattern_match"
path = "fuzz_targets/fuzz_pattern_match.rs"
doc = false

[[bin]]
name = "fuzz_wordexp"
path = "fuzz_targets/fuzz_wordexp.rs"
doc = false

[[bin]]
name = "fuzz_strftime"
path = "fuzz_targets/fuzz_strftime.rs"
doc = false

[workspace]
