[package]
name = "frankenlibc-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4.12", features = ["arbitrary-derive"] }
arbitrary = { version = "1.4.2", features = ["derive"] }
frankenlibc-membrane = { path = "../frankenlibc-membrane" }
frankenlibc-core = { path = "../frankenlibc-core" }
frankenlibc-abi = { path = "../frankenlibc-abi" }
libc = "0.2.185"

[[bin]]
name = "fuzz_string"
path = "fuzz_targets/fuzz_string.rs"
doc = false

[[bin]]
name = "fuzz_malloc"
path = "fuzz_targets/fuzz_malloc.rs"
doc = false

[[bin]]
name = "fuzz_membrane"
path = "fuzz_targets/fuzz_membrane.rs"
doc = false

[[bin]]
name = "fuzz_printf"
path = "fuzz_targets/fuzz_printf.rs"
doc = false

[[bin]]
name = "fuzz_printf_adversarial"
path = "fuzz_targets/fuzz_printf_adversarial.rs"
doc = false

[[bin]]
name = "fuzz_pathname"
path = "fuzz_targets/fuzz_pathname.rs"
doc = false

[[bin]]
name = "fuzz_env"
path = "fuzz_targets/fuzz_env.rs"
doc = false

[[bin]]
name = "fuzz_sched"
path = "fuzz_targets/fuzz_sched.rs"
doc = false

[[bin]]
name = "fuzz_pidfd_timer"
path = "fuzz_targets/fuzz_pidfd_timer.rs"
doc = false

[[bin]]
name = "fuzz_mmap"
path = "fuzz_targets/fuzz_mmap.rs"
doc = false

[[bin]]
name = "fuzz_signal"
path = "fuzz_targets/fuzz_signal.rs"
doc = false

[[bin]]
name = "fuzz_socket"
path = "fuzz_targets/fuzz_socket.rs"
doc = false

[[bin]]
name = "fuzz_fortify"
path = "fuzz_targets/fuzz_fortify.rs"
doc = false

[[bin]]
name = "fuzz_setjmp"
path = "fuzz_targets/fuzz_setjmp.rs"
doc = false

[[bin]]
name = "fuzz_dlfcn"
path = "fuzz_targets/fuzz_dlfcn.rs"
doc = false

[[bin]]
name = "fuzz_pthread_mutex"
path = "fuzz_targets/fuzz_pthread_mutex.rs"
doc = false

[[bin]]
name = "fuzz_pthread_cond"
path = "fuzz_targets/fuzz_pthread_cond.rs"
doc = false

[[bin]]
name = "fuzz_pthread_keys"
path = "fuzz_targets/fuzz_pthread_keys.rs"
doc = false

[[bin]]
name = "fuzz_pthread_rwlock"
path = "fuzz_targets/fuzz_pthread_rwlock.rs"
doc = false

[[bin]]
name = "fuzz_pthread_sync_misc"
path = "fuzz_targets/fuzz_pthread_sync_misc.rs"
doc = false

[[bin]]
name = "fuzz_c11threads"
path = "fuzz_targets/fuzz_c11threads.rs"
doc = false

[[bin]]
name = "fuzz_wchar"
path = "fuzz_targets/fuzz_wchar.rs"
doc = false

[[bin]]
name = "fuzz_resolver"
path = "fuzz_targets/fuzz_resolver.rs"
doc = false

[[bin]]
name = "fuzz_regex"
path = "fuzz_targets/fuzz_regex.rs"
doc = false

[[bin]]
name = "fuzz_scanf"
path = "fuzz_targets/fuzz_scanf.rs"
doc = false

[[bin]]
name = "fuzz_stdlib"
path = "fuzz_targets/fuzz_stdlib.rs"
doc = false

[[bin]]
name = "fuzz_ctype"
path = "fuzz_targets/fuzz_ctype.rs"
doc = false

[[bin]]
name = "fuzz_time"
path = "fuzz_targets/fuzz_time.rs"
doc = false

[[bin]]
name = "fuzz_math"
path = "fuzz_targets/fuzz_math.rs"
doc = false

[[bin]]
name = "fuzz_inet"
path = "fuzz_targets/fuzz_inet.rs"
doc = false

[[bin]]
name = "fuzz_locale"
path = "fuzz_targets/fuzz_locale.rs"
doc = false

[[bin]]
name = "fuzz_iconv"
path = "fuzz_targets/fuzz_iconv.rs"
doc = false

[[bin]]
name = "fuzz_dirent"
path = "fuzz_targets/fuzz_dirent.rs"
doc = false

[[bin]]
name = "fuzz_resolv"
path = "fuzz_targets/fuzz_resolv.rs"
doc = false

[[bin]]
name = "fuzz_pwd_grp"
path = "fuzz_targets/fuzz_pwd_grp.rs"
doc = false

[[bin]]
name = "fuzz_runtime_math"
path = "fuzz_targets/fuzz_runtime_math.rs"
doc = false

[[bin]]
name = "fuzz_elf_loader"
path = "fuzz_targets/fuzz_elf_loader.rs"
doc = false

[[bin]]
name = "fuzz_pattern_match"
path = "fuzz_targets/fuzz_pattern_match.rs"
doc = false

[[bin]]
name = "fuzz_wordexp"
path = "fuzz_targets/fuzz_wordexp.rs"
doc = false

[[bin]]
name = "fuzz_open_syscalls"
path = "fuzz_targets/fuzz_open_syscalls.rs"
doc = false

[[bin]]
name = "fuzz_errno_precedence"
path = "fuzz_targets/fuzz_errno_precedence.rs"
doc = false

[[bin]]
name = "fuzz_read_write"
path = "fuzz_targets/fuzz_read_write.rs"
doc = false

[[bin]]
name = "fuzz_strftime"
path = "fuzz_targets/fuzz_strftime.rs"
doc = false

[[bin]]
name = "fuzz_xdr"
path = "fuzz_targets/fuzz_xdr.rs"
doc = false

[[bin]]
name = "fuzz_vector_io"
path = "fuzz_targets/fuzz_vector_io.rs"
doc = false

[[bin]]
name = "fuzz_fcntl"
path = "fuzz_targets/fuzz_fcntl.rs"
doc = false

[[bin]]
name = "fuzz_statx"
path = "fuzz_targets/fuzz_statx.rs"
doc = false

[[bin]]
name = "fuzz_ioctl"
path = "fuzz_targets/fuzz_ioctl.rs"
doc = false

[[bin]]
name = "fuzz_splice"
path = "fuzz_targets/fuzz_splice.rs"
doc = false

[[bin]]
name = "fuzz_mount"
path = "fuzz_targets/fuzz_mount.rs"
doc = false

[[bin]]
name = "fuzz_sysv_ipc"
path = "fuzz_targets/fuzz_sysv_ipc.rs"
doc = false

[[bin]]
name = "fuzz_ptrace"
path = "fuzz_targets/fuzz_ptrace.rs"
doc = false

[[bin]]
name = "fuzz_io_uring"
path = "fuzz_targets/fuzz_io_uring.rs"
doc = false

[[bin]]
name = "fuzz_security_syscalls"
path = "fuzz_targets/fuzz_security_syscalls.rs"
doc = false

[[bin]]
name = "fuzz_keyring"
path = "fuzz_targets/fuzz_keyring.rs"
doc = false

[[bin]]
name = "fuzz_punycode"
path = "fuzz_targets/fuzz_punycode.rs"
doc = false

[[bin]]
name = "fuzz_fnmatch"
path = "fuzz_targets/fuzz_fnmatch.rs"
doc = false

[[bin]]
name = "fuzz_vis"
path = "fuzz_targets/fuzz_vis.rs"
doc = false

[[bin]]
name = "fuzz_strptime"
path = "fuzz_targets/fuzz_strptime.rs"
doc = false

[[bin]]
name = "fuzz_getsubopt"
path = "fuzz_targets/fuzz_getsubopt.rs"
doc = false

[workspace]
