[package]
name = "frankenlibc-membrane"
version.workspace = true
edition.workspace = true
license-file = "../../LICENSE"
description = "Transparent Safety Membrane for FrankenLibC"
build = "build.rs"

[features]
default = ["runtime-math-production"]
runtime-math-production = []
runtime-math-research = ["runtime-math-production"]

[dependencies]
parking_lot = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = "1.11"
libc = { workspace = true }
asupersync-conformance = { workspace = true }
ftui-harness = { workspace = true }
ftui-core = "0.2.1"
ftui-layout = "0.2.1"
ftui-render = "0.2.1"
ftui-style = "0.2.1"
ftui-widgets = "0.2.1"

[build-dependencies]
sha2 = { workspace = true }
