[package]
name = "frankenlibc"
version.workspace = true
edition.workspace = true
license-file = "../../LICENSE"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
parking_lot = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
libc = { workspace = true }

[[bench]]
name = "membrane_copy"
harness = false
