[package]
name = "frankenlibc_conformance"
version.workspace = true
edition.workspace = true
license-file = "../../LICENSE"

[features]
default = ["asupersync-tooling"]
asupersync-tooling = ["dep:asupersync_conformance"]
frankentui-ui = ["dep:ftui_harness"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
libc = "0.2"
frankenlibc = { path = "../frankenlibc" }
frankenlibc-core = { path = "../frankenlibc-core" }
frankenlibc-abi = { workspace = true }
asupersync_conformance = { package = "asupersync-conformance", version = "0.2.5", optional = true }
ftui_harness = { package = "ftui-harness", version = "0.2.1", optional = true }
